; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/agp/extr_alpha-agp.c_alpha_core_agp_remove_memory.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/agp/extr_alpha-agp.c_alpha_core_agp_remove_memory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 (%struct.TYPE_6__*, i32, %struct.agp_memory*)* }
%struct.agp_memory = type { i32 }

@agp_bridge = common dso_local global %struct.TYPE_7__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.agp_memory*, i32, i32)* @alpha_core_agp_remove_memory to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @alpha_core_agp_remove_memory(%struct.agp_memory* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.agp_memory*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_6__*, align 8
  %8 = alloca i32, align 4
  store %struct.agp_memory* %0, %struct.agp_memory** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load %struct.TYPE_7__*, %struct.TYPE_7__** @agp_bridge, align 8
  %10 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 0
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %10, align 8
  store %struct.TYPE_6__* %11, %struct.TYPE_6__** %7, align 8
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 0
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load i32 (%struct.TYPE_6__*, i32, %struct.agp_memory*)*, i32 (%struct.TYPE_6__*, i32, %struct.agp_memory*)** %15, align 8
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %18 = load i32, i32* %5, align 4
  %19 = load %struct.agp_memory*, %struct.agp_memory** %4, align 8
  %20 = call i32 %16(%struct.TYPE_6__* %17, i32 %18, %struct.agp_memory* %19)
  store i32 %20, i32* %8, align 4
  %21 = load %struct.agp_memory*, %struct.agp_memory** %4, align 8
  %22 = call i32 @alpha_core_agp_tlbflush(%struct.agp_memory* %21)
  %23 = load i32, i32* %8, align 4
  ret i32 %23
}

declare dso_local i32 @alpha_core_agp_tlbflush(%struct.agp_memory*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
